[tool.poetry]
name = "statapp"
version = "0.1.0"
description = "Projet de statistique appliquée pour la deuxième année de l'ENSAE."
authors = [
    "Gabriel Watkinson <gabriel.watkinson@ensae.fr>", 
    "Benjamin Bransten <benjamin.bransten@ensae.fr>", 
    "Mohamed Geuennouni-Hassani <mguennounihassani@gmail.com>", 
    "Jean-Baptiste Page <jean-batipste.page@ensae.fr>"
]
# license = "TypeDeLicense"
readme = "README.md"
homepage = "https://github.com/gwatkinson/statapp"
repository = "https://github.com/gwatkinson/statapp"
# documentation = "LienVersLaDoc"

# keywords = ["statistics", "patents", "R&D", "statapp"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.20.2"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
plotly = "^4.14.3"
scipy = "^1.6.3"
statsmodels = "^0.12.2"
sklearn = "^0.0"
torch = {version = "^1.8.1", python = "^3.8", platform = "windows"}
kmapper = "^2.0.0"

[tool.poetry.dev-dependencies]

# Jupyter
jupyter = "^1.0.0"
jupyterlab = "^3.0.14"
jupyterlab-kite = "^2.0.2"
jupyterlab-git = "^0.30.0"
voila = "^0.2.9"

# Formatters
black = "^20.8b1"
isort = "^5.5.1" # Sort imports

# Linters
pylint = "~2.6.0"
pydocstyle = "*"
# mypy = "~0.761"

# Testing
# pytest = "^5.4"
# pytest-describe = "^1.0"
# pytest-expecter = "*"
# pytest-repeat = "*"
# pytest-random = "*"
# pytest-cov = "*"
# pytest-profiling = "*"

# Documentation
mkdocs = "~1.0"
# pygments = "^2.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
# disable = "C0303"